# gitcabin

./: .dockerignore  .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  SECURITY.md  compose.tls.yml  compose.yml  pyproject.toml
.github/workflows/: pages.yml  release.yml
cab/: Dockerfile  go.mod  go.sum  main.go
cgit/: Dockerfile  cgitrc  lighttpd.conf
docs/: cab.md  git-access.md  github-sync.md  installation.md  palette.md  shared-cert.md  tls.md  web-assets.md
scripts/: cab  dump_pygments_css.py  seed_demo.py  trust.sh
site/: CNAME  index.html
src/gitcabin/: __init__.py  __main__.py  app.py  cli.py  combined.py  config.py  graphql_schema.py  ids.py  permissions.py  rest.py
src/gitcabin/storage/: __init__.py  _git_objects.py  counter.py  issues.py  layout.py  prs.py  repo.py  timestamps.py
src/gitcabin/sync/: __init__.py  _meta_ref.py  config.py  gh.py  pending.py  pull.py  push.py
src/gitcabin/web/: app.py  assets.py  code.py  format.py  pygments_css.py  routes.py
src/gitcabin/web/templates/: _base.html  _branch_row.html  _breadcrumb.html  _commit_row.html  _diff_file.html  _footer.html  _issue_row.html  _issue_state_filter.html  _macros.html  _owner_card.html  _ref_breadcrumb.html  _repo_breadcrumb.html  _repo_card.html  _repo_header.html  _repo_tabs.html  _repo_title.html  _synced_badge.html  _tag_row.html  _tree_table.html  blame.html  blob.html  branches.html  commit.html  commits.html  dashboard.html  empty_repo.html  issue.html  issues.html  owner.html  repo.html  tree.html
src/gitcabin/web/templates/icons/: branch.html  cabin.html  chevron_down.html  commit.html  download.html  file.html  file_css.html  file_dockerfile.html  file_go.html  file_html.html  file_js.html  file_json.html  file_license.html  file_lock.html  file_makefile.html  file_md.html  file_python.html  file_rust.html  file_shell.html  file_ts.html  file_yaml.html  folder.html  github.html  issue_closed.html  issue_open.html  raw.html  symlink.html  tag.html  theme_moon.html  theme_sun.html  theme_system.html  upstream.html
src/testgit/: __init__.py  __main__.py  app.py  config.py  graphql_schema.py  ids.py  rest.py
src/testgit/storage/: __init__.py  counter.py  issues.py  repo.py
src/testgit/web/: __init__.py  app.py  code.py  routes.py
src/testgit/web/static/: style.css
src/testgit/web/templates/: _base.html  _tree_table.html  blame.html  blob.html  branches.html  commit.html  commits.html  dashboard.html  issue.html  issues.html  owner.html  repo.html  tree.html
tests/: conftest.py  test_cli_role_mapping.py  test_cli_sync_push.py  test_cli_sync_sync.py  test_combined.py  test_graphql_create_issue.py  test_graphql_edit_delete.py  test_graphql_issue_close.py  test_graphql_issue_comment.py  test_graphql_issue_list.py  test_graphql_issue_view.py  test_graphql_prs.py  test_graphql_repo_list.py  test_graphql_repository.py  test_graphql_viewer.py  test_graphql_viewer_can.py  test_ids.py  test_permissions.py  test_render_markdown.py  test_rest_root.py  test_storage_counter.py  test_storage_issues.py  test_storage_perf.py  test_storage_prs.py  test_storage_repo.py  test_sync_config.py  test_sync_gh.py  test_sync_pull.py  test_sync_push.py  test_sync_push_resume.py  test_web_actions.py  test_web_assets.py  test_web_code.py  test_web_pages.py  test_web_slice3.py
web-src/: build.ts  package.json
web-src/src/: main.ts  styles.css
