[project]
name = "gitcabin"
version = "0.1.0"
description = "A tiny self-hosted GitHub clone driven by the official gh CLI, with all metadata stored in git itself."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "strawberry-graphql>=0.250",
    "pydantic>=2.9",
    "granian[reload]>=2.0",
    "gitpython>=3.1.48",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pygments>=2.20.0",
    "python-multipart>=0.0.27",
]

[project.scripts]
gitcabin = "gitcabin.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gitcabin"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Demo content in seed_demo.py contains intentional unicode glyphs (smart
# quotes in markdown samples, the ❯ prompt in .zshrc) that the
# ambiguous-character lint flags as confusables. They're the right glyphs.
"scripts/seed_demo.py" = ["RUF001"]
